--- a/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-02|HTML-&-CSS-Primeiros-passos-em-CSS/fixando/fixando-Introdução-ao-CSS.html
+++ b/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-02|HTML-&-CSS-Primeiros-passos-em-CSS/fixando/fixando-Introdução-ao-CSS.html
@@ -8,6 +8,9 @@
         font-size: 65;
         color: orange;
       }
+      ul{
+        background-color: aquamarine;
+      }
     </style>
   </head>
   <body>
