--- a/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-02|HTML-&-CSS-Primeiros-passos-em-CSS/fixando/fixando-Introdução-ao-CSS.html
+++ b/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-02|HTML-&-CSS-Primeiros-passos-em-CSS/fixando/fixando-Introdução-ao-CSS.html
@@ -5,18 +5,22 @@
     <title>HTML</title>
     <style>
       h1{
-        font-size: 65;
+        font-size: 65px;
         color: orange;
       }
       ul{
         background-color: aquamarine;
       }
+      .frutas{
+        background: gray;
+      }
+
     </style>
   </head>
   <body>
     <h1>Frutas</h1>
-    <p>Qual é a sua fruta favorita?</p>
-    <ul>
+    <p class = "frutas">Qual é a sua fruta favorita?</p>
+    <ul class = "frutas">
       <li>Maçã</li>
       <li>Banana</li>
       <li>Goiaba</li>
