explorando propriedaes e trocando a cor de fundo da lista fixando(2)

--- a/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-02|HTML-&-CSS-Primeiros-passos-em-CSS/fixando/fixando-2.html
+++ b/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-02|HTML-&-CSS-Primeiros-passos-em-CSS/fixando/fixando-2.html
@@ -3,30 +3,45 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
+  </head>
     <style>
-      h1{
-        font-family: sans-serif;
-        font-weigth: 600;
-      }
+
+    
       body{
-        font-size: 16px;
+        font-size: 20px;
+      }
+      h1{
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 100em;
+        font-style:italic;
+        text-decoration: underline
       }
       p{
-        font-size: 3em;
+        font-size: 1em;
+        font-weight: 600;
       }
+      ul{
+        line-height: 40px;
+      }
+      .central{ text-align: center;
 
-
+      }
+      #Amarelo{ background-color: yellow;}
+      #Vermelho{background-color: red;}
+      #marrom{background-color: brown;}
 
 
     </style>
-  </head>
+
   <body>
-    <h1>Cores</h1>
-    <p>Qual é a sua cor favorita?</p>
-    <ul>
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+
+    <img src = 'https://t.ctcdn.com.br/Ju4d96AB5br1xwte1x04FL_argA=/512x288/smart/filters:format(webp)/i614415.jpeg'>
+    <h1 class = 'central'>Cores</h1>
+    <p class = 'central'>Qual é a sua cor favorita?</p>
+    <ul class = 'central'>
+      <li id="Amarelo">Amarelo</li>
+      <li id="Vermelho">Vermelho</li>
+      <li id="marrom">Marrom</li>
     </ul>
   </body>
 </html>
