--- a/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-03|HTML-&-CSS-Seletores-e-Posicionamento/fixando/fixando3.html
+++ b/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-03|HTML-&-CSS-Seletores-e-Posicionamento/fixando/fixando3.html
@@ -7,7 +7,18 @@
   </head>
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
+
     <p>Top 3 dos melhores sites que existem na web</p>
+    <ol>
+      <li>Freepik</li>
+      <li>Dafont</li>
+      <li>Pinterest</li>
+    </ol>
     <p>Principais motivos para eu gostar deles</p>
+    <ol>
+      <li>No freepik tem uma infinidade de artes vetorizadas, em psd e outros tipo de arquivo, sendo assim muito eficiênte e prático na área de design.</li>
+      <li>O Dafont como o próprio nome ja diz, é referente a fontes no geral. Tem uma grande variedade de  estilo de fontes e é totalmente gratuito.</li>
+      <li>O Pinterest é um mar de inspiração, qualquer palavra que você jogue lá, é uma chuva de idéias que você pode ter.</li>
+    </ol>
   </body>
 </html>
