--- a/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-03|HTML-&-CSS-Seletores-e-Posicionamento/fixando/fixando3.html
+++ b/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-03|HTML-&-CSS-Seletores-e-Posicionamento/fixando/fixando3.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <title>Agrupando Seletores</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style3.css">
   </head>
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
 
     <p>Top 3 dos melhores sites que existem na web</p>
-    <ol>
+    <ul>
       <li>Freepik</li>
       <li>Dafont</li>
       <li>Pinterest</li>
-    </ol>
+    </ul>
     <p>Principais motivos para eu gostar deles</p>
-    <ol>
+    <ul>
       <li>No freepik tem uma infinidade de artes vetorizadas, em psd e outros tipo de arquivo, sendo assim muito eficiênte e prático na área de design.</li>
       <li>O Dafont como o próprio nome ja diz, é referente a fontes no geral. Tem uma grande variedade de  estilo de fontes e é totalmente gratuito.</li>
       <li>O Pinterest é um mar de inspiração, qualquer palavra que você jogue lá, é uma chuva de idéias que você pode ter.</li>
-    </ol>
+    </ul>
   </body>
 </html>
