--- a/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-03|HTML-&-CSS-Seletores-e-Posicionamento/fixando/fixando3.html
+++ b/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-03|HTML-&-CSS-Seletores-e-Posicionamento/fixando/fixando3.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <title>Agrupando Seletores</title>
     <link rel="stylesheet" href="style3.css">
+    <link href="https: //fonts.googleapis.com/css2?family= Space+Mono & display=swap" rel= " stylesheet">
   </head>
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
 
     <p>Top 3 dos melhores sites que existem na web</p>
     <ul>
-      <li>Freepik</li>
-      <li>Dafont</li>
-      <li>Pinterest</li>
+      <li class="sites">Freepik</li>
+      <li class="sites">Dafont</li>
+      <li class="sites">Pinterest</li>
     </ul>
     <p>Principais motivos para eu gostar deles</p>
     <ul>
-      <li>No freepik tem uma infinidade de artes vetorizadas, em psd e outros tipo de arquivo, sendo assim muito eficiênte e prático na área de design.</li>
-      <li>O Dafont como o próprio nome ja diz, é referente a fontes no geral. Tem uma grande variedade de  estilo de fontes e é totalmente gratuito.</li>
-      <li>O Pinterest é um mar de inspiração, qualquer palavra que você jogue lá, é uma chuva de idéias que você pode ter.</li>
+      <li class="motivos">No freepik tem uma infinidade de artes vetorizadas, em psd e outros tipo de arquivo, sendo assim muito eficiênte e prático na área de design.</li>
+      <li class="motivos">O Dafont como o próprio nome ja diz, é referente a fontes no geral. Tem uma grande variedade de  estilo de fontes e é totalmente gratuito.</li>
+      <li class="motivos">O Pinterest é um mar de inspiração, qualquer palavra que você jogue lá, é uma chuva de idéias que você pode ter.</li>
     </ul>
   </body>
 </html>
