--- a/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-03|HTML-&-CSS-Seletores-e-Posicionamento/fixando/fixando4.html
+++ b/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-03|HTML-&-CSS-Seletores-e-Posicionamento/fixando/fixando4.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Pseudo-classes</title>
   <link rel="stylesheet" href="style4.css">
+  <link href="https: //fonts.googleapis.com/css2?family= Pangolin & family = Playfair:ital@1 & family= Poppins:wght@100 & family= Righteous & family= Space+Mono & display=swap" rel="stylesheet">
 </head>
 <body>
   <h1>Paleta de Cores</h1>
