--- a/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-04|HTML-Semântico/fixando/fixando1.html
+++ b/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-04|HTML-Semântico/fixando/fixando1.html
@@ -11,11 +11,13 @@
       <h1>Hackathon Results</h1>
     </header>
     <section>
-      <ul>
-        <li class="first">1º - Equipe 1</li>
-        <li class="second">2º - Equipe 2</li>
-        <li class="third">3º - Equipe 3</li>
-      </ul>
+      <div class="ranked">
+        <ul>
+          <li class="first">1º - Equipe 1</li>
+          <li class="second">2º - Equipe 2</li>
+         <li class="third">3º - Equipe 3</li>
+        </ul>
+      </div>
     </section>
     <section class="premiacao">
       <h3>Premiação Primeiro Lugar:</h3>
